[package]
name = "loblaw"
version = "0.1.0"
authors = ["markpedersen"]
edition = "2018"

[dependencies]
hyper = "0.13.6"
tokio = { version = "0.2.21", features = ["full"] }
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.18.0"
strum_macros = "0.18.0"
rand = "0.7.3"
