[package]
name = "loblaw"
version = "0.1.0"
authors = ["markpedersen"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
hyper = "0.13.6"
toml = "0.5.6"
serde_json = "1.0"
strum = "0.18.0"
strum_macros = "0.18.0"
rand = "0.7.3"

[dependencies.time]
version = "0.2"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "0.2.21"
features = ["full"]

[dependencies.cookie]
version = "0.14"
features = ["percent-encode"]
