[package]
name = "loblaw"
version = "0.1.0"
authors = ["markpedersen"]
edition = "2018"

[dependencies]
toml = "0.5.6"
serde_json = "1.0"
strum = "0.18.0"
strum_macros = "0.18.0"
rand = "0.7.3"
async-trait = "0.1.36"
futures = "0.3"
pin-project = "0.4"
actix-web = "2"
actix-rt = "1"
actix = "0.10.0-alpha.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "0.2.21"
features = ["full"]